url to term of services
Former-commit-id: cfe5d4274ddbee3c6a96c560c48213c27efe880c [formerly 96eed3722df83da7d11b096e972b57ecf5322164] [formerly 0a35ed9bfd92ed1917057e2f96b84b81f4ed8418 [formerly 3e3149b9947fd4081a4ac2e14816e89334738151]]
Former-commit-id: e2ed2d40d4398b06e8fc7e6fa7249588e7b7a6e7 [formerly d84519412b5e73416bc9f52ee75fa086fa7861a3]
Former-commit-id: 935fa9950d92cd50f9ad51543a0a3db3f3b2dc74

--- a/templates/base.html
+++ b/templates/base.html
@@ -442,9 +442,9 @@
 
 
 
-//      var ROOT = '/_ah/api';
+      var ROOT = '/_ah/api';
 
-     var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
