--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -613,10 +613,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
-                        <p>Copyright &copy;2014 ioGrow. All Rights Reserved.</p>
+                        <p>Copyright &copy;2014 ioGrow. All Rights Reserved yhhyy.</p>
                     </div>
                     <div class="col-lg-2">
-                        <p><a href="#" class="white-link">Terms</a> | <a href="#" class="white-link">Privacy</a> | <a href="#" class="white-link">Legal</a></p>
+                        <p><a href="https://hackpad.com/ep/pad/static/tmLKLxTWMDR" target="new" class="white-link">Terms</a> | <a href="#" class="white-link">Privacy</a> | <a href="#" class="white-link">Legal</a></p>
                     </div>
                 </div><!-- /row -->
             </div><!-- /container -->
