fixing bug on opportunity update the amount and duration, after clicking ok the form should be hidden fix #1037
Former-commit-id: cb1ae5f54304303b779f3ddb016c54a8b96b6455 [formerly ffeea20c9d01c847f1b815b65749585555448f76] [formerly 2b0d70ed1e04383ec17bfef3ba90a8dc2f6fd859 [formerly 3a555e32c380837a042de007ee93bfb17d308415]]
Former-commit-id: b408c25759a4fd58ec48829e9a701d88fc6ebb4c [formerly 732546f9454e969d8ff7f36e07ae7e52d24c3814]
Former-commit-id: f9ed7478e7713545cd012044816b2fab300617fe

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="relatedTags tags-section hidden" ng-class="{hidden: account.tags == null}">
+                                    <div class="relatedTags tags-section">
                                         <div class="section-content">
                                             <span class="pull-left"><i class="fa fa-tags"></i>{{_('Tags')}}: </span>
                                             <!-- ngRepeat: tag in account.tags -->
