--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -222,7 +222,7 @@
                  </li>
                  <li class="inline-tags addNewAssigneeLi">
                    <a   class="pull-left task-label task-tag" ng-click="assigneeModal()">
-                        <span class="">
+                        <span class="" style="cursor:pointer;">
                           {{ _(" + Add new")}}                                                     
                         </span>
                          <div class="clearfix"></div>
