--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -120,7 +120,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <hr class="sm-hr">
-                  <div class="relatedTags tags-section" ng-class="{hidden: contact.tags == null}">
+                  <div class="relatedTags tags-section">
                         <div class="section-content">
                             <span class="pull-left"><i class="fa fa-tags"></i>{{_('Tags')}}: </span>
                             <!-- ngRepeat: tag in account.tags -->
