--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -473,8 +473,8 @@
   text-align: center;
   }
   .google-sign{
-margin-top: 07px;
-  margin-left: 15px;
+  margin-top: 07px;
+  margin-left: 0px;
 }
 </style>
 <style media="screen and (max-width: 800px), screen and (max-height: 800px)">
@@ -499,8 +499,8 @@ margin-top: 07px;
   margin: 20px auto 15px;
   }
   .content {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0px;
+  padding-right: 2px;
   }
   .hidden-small {
   display: none;
@@ -512,8 +512,15 @@ margin-top: 07px;
   .footer ul li {
   padding-right: 1em;
   }
+  .signin-card{
+    padding: 2px !important;
+  }
   .lang-chooser-wrap {
   display: none;
+  }
+  .google-sign{
+    margin-top: 07px;
+    margin-left: 0px;
   }
 </style>
 <style>
@@ -572,7 +579,7 @@ margin-top: 07px;
   margin-bottom: 20px;
   }
   .signin-card {
-  width: 274px;
+  width: 288px;
   padding: 40px 40px;
   }
   .signin-card .profile-img {
@@ -684,7 +691,7 @@ margin-top: 07px;
   margin-bottom: 15px;
   }
   .signin-card {
-  width: 260px;
+  width: 288px;
   padding: 20px 20px;
   margin: 0 auto 20px;
   }
