--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -229,7 +229,7 @@
                               </div>
                             </div>
                           </div>
-                           <div class="oppPrice col-md-7 margin-bottom-15">
+                           <div class="oppPrice col-md-7 ">
                             <div class="form-group currencyForm" ng-show="showPriceForm">
                               <div class="col-md-12 margin-bottom-10">
                                   <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
@@ -354,7 +354,7 @@
 
                         </div>
                         <div class="row padding-bottom-15">
-                          <div class="col-md-12">
+                          <div class="col-md-12 margin-opp">
                             <div class="form-group">
 
                                 <div class="col-md-12">
