--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -15,6 +15,12 @@
         </div>
     </div>
   <div class=" subHeaderContent">
+    <div class="pull-right sharebuttonDiv">
+      <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
+        <i class="icon-lock"></i>
+        {{ _("Share") }}
+      </a>
+    </div>
 
             <h2 class="page-title">
             <a href="/#/tasks/" data-toggle="tooltip" data-placement="bottom" title="Back to Tasks">
@@ -437,7 +443,64 @@
         </div>
        </div>
       </div>
-    <!-- -->
+    <!-- share modale-->
+    <div id="sharingSettingsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+           <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="addMember" name="addaccount" ng-submit="share()" class="form-horizontal">
+
+                    <p>{{ _("Who has access:") }}</p>
+                    <div class="radio-list">
+
+                            <label >
+                            <input type="radio" name="optionRadio" value="public" ng-click="share()" ng-model="task.access" />
+                            {{ _("public: Anyone within your organization can access and find") }}
+                            </label>
+                            <label >
+                            <input type="radio" name="optionRadio" value="private" ng-click="share()"  ng-model="task.access" />
+                            {{ _("private: only you and your collaborators") }}
+                            </label>
+                    </div>
+                    <hr/>
+                    <div class=''>
+                    <p>{{ _("Collaborators:") }}</p>
+                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
+                          <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
+                           <%=collaborator.display_name%> < <%=collaborator.email%> >
+                        </div>
+
+                    </div>
+                    <hr/>
+
+                    <div class=''>
+                    <p>{{ _("Invited user:") }}</p>
+                    <div class="invitation" ng-repeat="invited in sharing_with">
+                      <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
+                        <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
+                      <hr/>
+                    </div>
+
+                       <p>{{ _("Invite collaborators:")}}</p>
+                        <div class="form-group">
+                            <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                        </div>
+
+                      </div>
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <button  type="submit" ng-click="share()" class="btn blue addContactNow">{{_("Share")}}</button>
+              </div>
+               </form>
+               </div>
+               </div>
+
+       </div>
 
     <script type="text/javascript">
     $('#checkTaskInShow').uniform();
