--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -223,9 +223,8 @@
                         <div class="form-group selector-margin">
                           <label  class="required col-md-3 control-label">{{_("Status")}} </label>
                           <div class="col-md-9">
-                                   <select class="form-control" ng-model="casee.current_status.name" ng-options="stat.status for stat in casesatuses" >
-                                       <option value="" ><%=casee.current_status.name%></option>
-                                  </select>
+                                   <select class="form-control" ng-model="casee.current_status" ng-change="updateCaseStatus()" ng-options="stat as stat.status  for stat in casesatuses track by stat.status" >
+                          </select>
 
                           </div>
                         </div>
@@ -233,7 +232,7 @@
                               <label  class="required col-md-3 control-label">{{_("Priority")}} </label>
 
                               <div class="col-md-9">
-                                <select class="form-control" ng-model="casee.priority">
+                                <select class="form-control" ng-model="casee.priority" ng-change="updateCase({'id':casee.id,'priority':casee.priority})">
                                   <option value="">-- {{_("Choose a priority")}} --</option>
                                   <option value="1">1 - {{ _('Low')}}</option>
                                   <option value="2">2</option>
@@ -295,7 +294,7 @@
                           <div class="form-group row">
                               <div class="col-md-12">
 
-                                  <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="casee.description"></textarea>
+                                  <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="casee.description" ng-blur="updateCase({'id':casee.id,'description':casee.description})"></textarea>
 
                               </div>
                           </div>
@@ -710,9 +709,8 @@
 
                         <div class="col-md-9">
 
-                          <select class="form-control" ng-model="casee.current_status.name" ng-options="stat.status for stat in casesatuses" >
-                                       <option value="" ><%=casee.current_status.name%></option>
-                                  </select>
+                          <select class="form-control" ng-model="casee.current_status" ng-change="updateCaseStatus()" ng-options="stat as stat.status  for stat in casesatuses track by stat.status" >
+                          </select>
 
                         </div>
 
