--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1631,9 +1631,31 @@
                                                         <a href="<%=companydetails.url%>"><%=companydetails.url%></a> 
                                                     </li>
                                                 </ul>
-                    
+
+                                                 <h3>Workers Detail</h3>
+                                                 <ul class="chats">
+                                                    <li class="in" ng-repeat="worker in companydetails.workers" id="topic_<%=$index%>">
+                                                        <img class="avatar" alt="" ng-src="<%= worker.img%>" />
+                                                        <div class="message">
+                                                            <span class="arrow"></span>
+                                                            <a href="<%=worker.url%>" class="name">
+                                                                <%= worker.firstname%>  <%= worker.lastname%>
+                                                            </a>
+                                                         
+                                                            <span class="body">
+                                                                <a href="<%=getTopicUrl(topic.topic_kind,topic.id)%>" class="discussion-content">    <strong class="ng-binding">
+                                                                        <%= worker.function%>
+                                                                    </strong> 
+                                                                </a>
+                                                            </span>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+
                                             </div>
                                         </div>
+
+                                     
                                        
                                     </div>
                                 </div>
