delete privacy and term on welcome page
Former-commit-id: 52e1edbd6c22c6eb8ae460d5198c68d5432007fe [formerly 743b971498691521694bf5f3f999af2937df1925] [formerly be8c205ae28eac5dab2184975808cfed724efa22 [formerly cdf56201ff3437dbe5cf78a52ec4cb9aceb47074]]
Former-commit-id: 594329432806985b9f6c28d0a743f258bec9bf77 [formerly b8cbc9421b36e31021e159f049d7168928317b5f]
Former-commit-id: 6359d400b546465893549eba3eeca72198a145b5

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -616,7 +616,7 @@
                         <p>Copyright &copy;2014 ioGrow. All Rights Reserved yhhyy.</p>
                     </div>
                     <div class="col-lg-2">
-                        <p><a href="https://hackpad.com/ep/pad/static/tmLKLxTWMDR" target="new" class="white-link">Terms</a> | <a href="#" class="white-link">Privacy</a> | <a href="#" class="white-link">Legal</a></p>
+                        <p><a href="https://hackpad.com/ep/pad/static/tmLKLxTWMDR" target="new" class="white-link">Terms & Services</a>  <!--a href="#" class="white-link">Privacy</a> | <a href="#" class="white-link">Legal</a--></p>
                     </div>
                 </div><!-- /row -->
             </div><!-- /container -->
