--- a/templates/billing/billing_list.html
+++ b/templates/billing/billing_list.html
@@ -192,7 +192,7 @@
               <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("My setting")}}</h3>
+                <h3 id="myModalLabel" class="modal-title">{{_("Purchase license")}}</h3>
               </div>
 
               <div class="modal-body">
@@ -200,23 +200,26 @@
 
 
                   <div class="form-group">
-                        <label  class=" col-md-3 control-label">{{_("Language")}} </label>
+                        <label  class=" col-md-3 control-label">{{_("Plan")}} </label>
 
                         <div class="col-md-9">
 
-                          <select class="form-control" curr ng-model="user.language" >
-                                        <option value="">{{uSerlanguage}}</option>
-                                        <option value="en" >{{_('English')}} </option>
-                                        <option value="ar">{{_('Arabic')}}</option>
-                                        <option value="fr" >{{_('French')}}</option>
+                          <select class="form-control" curr ng-model="user.language" id="id_plan">
+                                        <option value="<%= plan.id%>" ng-repeat="plan in plans"><%=plan.name%> - <%=plan.amount_str%>$
+                                        </option>
+                                       
                             </select>
+                       </div>
 
+                         <label  class=" col-md-3 control-label">{{_("Number of license")}} </label>
+                        <div class="col-md-9">
+                            <input class="form-control" type="text" required id="id_license_nmbr" ng-model="licensenbr"/>
                         </div>
                     </div>
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" id="customButton"   class="btn red addContactNow">{{_("Purchase")}} </button>
+                <button  type="submit" id="customButton"   class="btn red addContactNow" >{{_("Purchase")}} </button>
               </div>
                </form>
                </div>
