--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -674,7 +674,7 @@
           ga('send', 'pageview');
 
         </script>
-        <script>
+        <!--script>
 // Include the UserVoice JavaScript SDK (only needed once on a page)
 UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/2I3RB4gt8stvq2jV6fs9A.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
  
@@ -742,7 +742,7 @@ $("#pricingIndex").text(current)
 })
 
 })
-</script>
+</script-->
 
     </body>
 </html>
