working on the website welcome page"
Former-commit-id: e660f694850b382ab6844b44f5350251ef922171 [formerly 2caf06b37c97e2997dbc16f8adee10766c64a6fa] [formerly f7548766aa73e66668f0269c5797a65778c94a44 [formerly 247f48aa7a067efa90dede553308c74a98b1bc0c]]
Former-commit-id: cb1aaef1ab70a44c377664e8e220deb6b0288677 [formerly f3fe2686c4ef85b556f5f0f589b4ef0a0c1a96cb]
Former-commit-id: 8acbc2b8efed4157bce8bf4192a5be65c2d2b42a

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -377,8 +377,8 @@
                     </div>
 
                     
-                    <img src="https://dl.dropboxusercontent.com/u/20304109/screenshot.png"
-                    style="margin-top:10px; width:1180px; height:617px;"
+                    <img src="/static/welcome/img/leads_screenshot.png"
+                    style="margin-top:10px;" class="img-responsive" 
                     >
                       
                     </div>
@@ -565,44 +565,58 @@
     <div id="pricingwrap">
       <div class="container text-center">
         <br>
-        <h2>Our Pricing Options</h2>
+        <h2>Our Payment Options</h2>
         <hr><br><br>
         <div class="row">
-          <div class="col-xs-12 col-md-3" style="margin-left:430px;">
+          <div class="col-xs-12 col-md-4">
             <div class="panel panel-custom">
               <div class="panel-heading">
-                <h3 id="plan" class="panel-title">Starter</h3>
+                <h3 class="panel-title">With credit card</h3>
               </div>
               <div class="panel-body">
                 <div class="the-price">
-                  <h2 id="price" ><span class="subscript"></span></h2>
-                  <small id="note"></small>
+                  <h2>$10<span class="subscript"></span></h2>
+                  <small>/user/month</small>
                 </div>
-                <table class="table">
-                  <tr>
-                    <td>1 Account</td>
-                  </tr>
-                  <tr>
-                    <td>1 Project</td>
-                  </tr>
-                  <tr>
-                    <td>50K API Access</td>
-                  </tr>
-                  <tr>
-                    <td>100MB Storage</td>
-                  </tr>
-                  <tr>
-                    <td>Custom Cloud Services</td>
-                  </tr>
-                  <tr>
-                    <td>Weekly Reports</td>
-                  </tr>
-                </table>
+                
               </div>
               <div class="panel-footer">
-                <a href="#" class="btn btn-theme" role="button">Sign Up</a>
-                <a id="nextPricing" class="btn btn-theme" role="button">Next ></a>
-                <input id="pricingIndex" hidden>
+                 visa mastercard...
+                <!-- <a href="#" class="btn btn-theme" role="button">Sign Up</a> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-md-4">
+            <div class="panel panel-custom">
+              <div class="panel-heading">
+                <h3 class="panel-title">With Bitcoin</h3>
+              </div>
+              <div class="panel-body">
+                <div class="the-price">
+                  <h2>0.02 bitcoin<span class="subscript"></span></h2>
+                  <small>/user/month</small>
+                </div>
+              </div>
+              <div class="panel-footer">
+                bitcoin img
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-md-4">
+            <div class="panel panel-custom">
+              <div class="panel-heading">
+                <h3 class="panel-title">With a Tweet</h3>
+              </div>
+              <div class="panel-body">
+              <div class="the-price">
+                <h2>Share a tweet<span class="subscript"></span></h2>
+                <small>One month free!</small>
+              </div>
+              </div>
+              <div class="panel-footer">
+                tweet
               </div>
             </div>
           </div>
