added new screenshot + new description
Former-commit-id: b2bb8b56f8fc2be964dda391eec41b33a6b0c573 [formerly 080f87134910f96eea70f738d18f1f2e47f05d80] [formerly 677aa066c36b9c005818272a71c504213c130a02 [formerly a07a8ae13ecba8b33851907983cb7233e9a4255c]]
Former-commit-id: 071941b3311414e407d882f9fd5b9abdbd83dcc6 [formerly 49a6a6144e8f233b2d600b74ab52e37f71957a2d]
Former-commit-id: f9044149c20044c22f4c509848d3da0ba7eba91c

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="ioGrow - Great customer relationship management for startups">
+        <meta name="description" content="ioGrow - a better way for startups to do CRM">
         <meta name="keywords" content="">
         <meta name="author" content="Daniely Wright">
         <link href="/static/welcome/ico/favicon.png" rel="shortcut icon" >
@@ -219,17 +219,7 @@
                                 <span class="buttonText">Signup for ioGrow</span></a>
                               </div>
                             </div>
-                        <!-- <span id="signinButton">
-                     <span
-                            class="g-signin"
-                            data-callback="signinCallback"
-                            data-clientid="935370948155-qm0tjs62kagtik11jt10n9j7vbguok9d.apps.googleusercontent.com"
-                            data-cookiepolicy="single_host_origin"
-                            data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                            data-scope="https://www.googleapis.com/auth/plus.login">
-                    </span>
-                        </span> -->
-
+                    
                         </div>
                     </ul>
                 </div><!--/nav-collapse -->
@@ -379,7 +369,7 @@
                     
                     <img src="https://dl.dropboxusercontent.com/u/20304109/screenshot.png"
                     style="margin-top:10px; width:1180px; height:617px;"
-                    >
+                    class="img-responsive">
                       
                     </div>
                 </div>
@@ -394,27 +384,27 @@
 
                     <div class="col-lg-3">
 
-                        <span class="typcn typcn-group-outline"><span>
+                        <span class="typcn typcn-archive"><span>
                         <h3>Zero Data Entry</h3>
-                        <p>Add contacts right from Linkedin and  Gmail using our Chrome extension and stay up to date on what's happening with them.<a href="http://iogrow.nerdroid.com/"> </a></p>
+                        <p>Manual data entry is oldschool, Add contacts right from Linkedin and  Gmail using our Chrome extension and stay up to date on what's happening with them.<a href="http://iogrow.nerdroid.com/"> </a></p>
                     </div>
                     <div class="col-lg-3">
 
-                        <span class="typcn typcn-star-outline"><span>
-                        <h3>Simple as your inbox</h3>
-                        <p>You can get started in no time, we simplify the experience for you so you can focus on what matters, your relationships.</p>
+                        <span class="typcn typcn-heart-full-outline"><span>
+                        <h3>Easy to use</h3>
+                        <p>You can get started in no time, We've built the freshet CRM out there by simplifying the experience for you, so you can focus on what matters. your relationships.</p>
                     </div>
                     <div class="col-lg-3">
-                        <span class="typcn typcn-lock-closed-outline"><span>
+                        <span class="typcn typcn-news"><span>
 
-                        <h3>Privacy & scalability first</h3>
-                        <p>We'll never share your contacts, our core solution is built on top of the same secured, scalable infrastructure that powers Google search</p>
+                        <h3>Contextual data</h3>
+                        <p>We bring all the information related to your contacts and organizations in one place, so you can get the right information at the time you need it, No Googling for your contacts again!</p>
                     </div>
                     <div class="col-lg-3">
-                        <span class="typcn typcn-weather-cloudy"><span>
+                        <span class="typcn typcn-support"><span>
 
-                        <h3>Google Apps integration</h3>
-                        <p>We are fully integrated with Google Apps from Calender, Drive to Gmail. boost your network using the tools you already know and love</p>
+                        <h3>Free Support, Forever</h3>
+                        <p>Our desk is open 7 days a week, Free videos and guides and Helpful experts advice, Got a question to ask?<a href="mailto:contact@iogrow.com"> shoot us an email</a>, Our advisors are here to answer your questions and guide you every step of the way</p>
                     </div>
                 </div>
                 <br>
@@ -627,8 +617,6 @@
                         <div id="social">
                             <a href="https://www.facebook.com/iogrow" rel="tooltip" title="Facebook" class="facebook">Facebook</a>
                             <a href="https://twitter.com/iogrow" rel="tooltip" title="Twitter" class="twitter">Twitter</a>
-                            <a href="#" rel="tooltip" title="LinkedIn" class="linkedin">LinkedIn</a>
-                            <a href="#" rel="tooltip" title="YouTube" class="youtube">YouTube</a>
                         </div>
                     </div>
 
