added features descriptions
Former-commit-id: 10f977cb237c84c0bb54e142fbebe5d042bbffe7 [formerly a232465a3c87b2aa612ac4a4f7edab220fb3a841] [formerly 98fb53a511a13a0002f4dba7b4039f99e229e96a [formerly 1bc1cf9a66beeba6cc9c62e2b3887d4196126713]]
Former-commit-id: 3d7244599ced104fe466f42795082208a3598081 [formerly b263cf3bb4df7b6b16983560a3d43b8ebd5c560a]
Former-commit-id: e0266f85bfb3758411a8f3d7bd0a1698bb09d360

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -424,13 +424,13 @@
                     <div class="col-lg-6 features-description">
 
 
-                  <a href="/static/welcome/img/mark_as_lead.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="/static/welcome/img/mark_as_lead.png" alt="" style="
+                  <a href="https://dl.dropboxusercontent.com/u/20304109/s1.png" data-lightbox="image-1" data-title="Mark as lead"><img class="img-responsive" src="https://dl.dropboxusercontent.com/u/20304109/s1.png" alt="" style="
                       width: 350px;
                       /* border: 2px #333 !important; */
                       border: 1px solid rgb(207, 201, 201);
                       padding: 3px;
                       -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-                  "> </a><a href="/static/welcome/img/mark_as_lead.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
+                  "> </a>
                     </div>
 
                     <div class="col-lg-6 features-description">
@@ -445,7 +445,7 @@
                                 <div id="collapseOne" class="accordion-body collapse in">
                                     <div class="accordion-inner">
                                     <p>If you are looking to build a potential network of contacts, it's not just a matter of adding them manually, you can do better!
-                                    Use the free Google Chrome extension that allows you to add people right from Linkedin, Twitter and Gmail in one click. Keep the experience you know and connect with the people you need.</p>
+                                    Use the free Google Chrome extension that allows you to add people right from Linkedin and Gmail in one click. Keep the experience you know and connect with the people you need.</p>
                                     </div><!-- /accordion-inner -->
                                 </div><!-- /collapse -->
                             </div><!-- /accordion-group -->
@@ -456,44 +456,43 @@
                 </div><!-- /row -->
                 <br><br>
                 <div class="row">
-                    <h2 class="text-center">Instant Access</h2>
+                    <h2 class="text-center">Social Discovery</h2>
                     <hr><br><br>
                     <div class="col-lg-6 features-description">
                         <br><br>
                         <h4><i class=" "></i>  </h4>
-                        <p>When you're calling someone on your contact list, you can instantly access his profile for a detailed look at his information and your common interactions such as notes and tasks.
-                        So that you can make each conversation more personal and productive.
+                        <p> As in real life, you can still keep track on topics you're interested right from ioGrow! sit back, grab some popcorn and we'll get the right information you need from social networks right when you need it.
                         </p>
                         <br><br>
                     </div>
 
                     <div class="col-lg-6">
-                        <a href="/static/welcome/img/instant_access.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="/static/welcome/img/instant_access.png" alt="" style="
+                        <a href="https://dl.dropboxusercontent.com/u/20304109/s2.png" data-lightbox="image-1" data-title="Social Discovery"><img class="img-responsive" src="https://dl.dropboxusercontent.com/u/20304109/s2.png" alt="" style="
     width: 430px;
     /* border: 2px #333 !important; */
     border: 1px solid rgb(207, 201, 201);
     padding: 3px;
     -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a><a href="/static/welcome/img/instant_access.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
+"> </a>
                     </div>
 
                 </div>
 
 <div class="row">
-                    <h2 class="text-center">Clear & Concise</h2>
+                    <h2 class="text-center">Simplicity out of the box</h2>
                     <hr>
                     <br>
                     <br>
                     <div class="col-lg-6 features-description">
 
 
-<a href="/static/welcome/img/clear_concise.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="/static/welcome/img/clear_concise.png" alt="" style="
+<a href="https://dl.dropboxusercontent.com/u/20304109/s3.png" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="https://dl.dropboxusercontent.com/u/20304109/s3.png" alt="" style="
     width: 430px;
     /* border: 2px #333 !important; */
     border: 1px solid rgb(207, 201, 201);
     padding: 3px;
     -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a><a href="/static/welcome/img/clear_concise.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
+"> </a>
                     </div>
 
                     <div class="col-lg-6 features-description">
@@ -519,25 +518,23 @@
                     </div>
                 </div><!-- /row -->
                 <div class="row">
-                    <h2 class="text-center">Everything neatly in one place</h2>
+                    <h2 class="text-center">More details</h2>
                     <hr><br><br>
                     <div class="col-lg-6 features-description">
                         <br><br>
-                        <p>Stop wasting time struggling with spreadsheets, forms, or emails and start focusing on growing your network.
-                        A clean, simple interface that collects all your contacts' data, can dramatically saves you time and increase your productivity
+                        <p>We believe you need more than what you typed, ioGrow is built to help you ditch data entry, adding an account name will get you the whole information about the company you're looking in no time. Let us give you the information and focus on making the decisions.
                         </p>
                         <br><br>
                     </div>
 
                     <div class="col-lg-6">
-                        <a href="/static/welcome/img/neatly.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="/static/welcome/img/neatly.png" alt="" style="
+                        <a href="https://dl.dropboxusercontent.com/u/20304109/s4.png" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="https://dl.dropboxusercontent.com/u/20304109/s4.png" alt="" style="
     width: 430px;
     /* border: 2px #333 !important; */
     border: 1px solid rgb(207, 201, 201);
     padding: 3px;
     -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a><a href="/static/welcome/img/neatly.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
-                    </div>
+"> </a></div>
 
                 </div>
                 <br>
