modified welcome page
Former-commit-id: e94041145c6915e7208ae98429990139f0acbdd4 [formerly d7cd2fd56714f0434c395c132e5583cd42529abb] [formerly f83d8b8b7dae84b96c9a0d184d757bbd9e7ead09 [formerly 3c50ee802fe2490524f34a008189b3da575ceb1f]]
Former-commit-id: 7c496569d1a559a34f02cd8d20ab627ec34100a2 [formerly 4ba24af5a840792ec48bdc90513be18b1f71763b]
Former-commit-id: 65c28051c0cac5aac989a0c35884e05ac1efc5b6

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -518,7 +518,7 @@
                     </div>
                 </div><!-- /row -->
                 <div class="row">
-                    <h2 class="text-center">More details</h2>
+                    <h2 class="text-center">More data</h2>
                     <hr><br><br>
                     <div class="col-lg-6 features-description">
                         <br><br>
@@ -567,23 +567,9 @@
                 </div>
                 <table class="table">
                   <tr>
-                    <td>1 Account</td>
+                    <td>1 Full ioGrow licence</td>
                   </tr>
-                  <tr>
-                    <td>1 Project</td>
-                  </tr>
-                  <tr>
-                    <td>50K API Access</td>
-                  </tr>
-                  <tr>
-                    <td>100MB Storage</td>
-                  </tr>
-                  <tr>
-                    <td>Custom Cloud Services</td>
-                  </tr>
-                  <tr>
-                    <td>Weekly Reports</td>
-                  </tr>
+                  
                 </table>
               </div>
               <div class="panel-footer">
