add google plus icon on welcome page
Former-commit-id: 991a3f504b063e29a036a63212b076cdfd3db9b5 [formerly 2ca882debaaf2f45d83c17c4fa4fae4875db25ae] [formerly 50aa884a4b29eb0f85467655acef135d8b6fff47 [formerly c35978a79122fc1dfd85070f652d8feb4caecf99]]
Former-commit-id: e3ff2c719c7f3198153b6a4b467dce0a1dcb195d [formerly 363b72edc5706051bcd83d7d2e0a61ea7adc347f]
Former-commit-id: b949e5299e749b88e7db41a8234a198d93bf3a5e

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -598,8 +598,9 @@
                     <div class="col-lg-4">
 
                         <div id="social">
-                            <a href="https://www.facebook.com/iogrow" rel="tooltip" title="Facebook" class="facebook">Facebook</a>
-                            <a href="https://twitter.com/iogrow" rel="tooltip" title="Twitter" class="twitter">Twitter</a>
+                            <a href="https://www.facebook.com/iogrow" target="new" rel="tooltip" title="Facebook" class="facebook">Facebook</a>
+                            <a href="https://twitter.com/iogrow" rel="tooltip" target="new" title="Twitter" class="twitter">Twitter</a>
+                            <a href="https://plus.google.com/110820504821255547625" target="new" rel="tooltip" title="gplus" class="googleplus">Google plus</a>
                         </div>
                     </div>
 
