--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1196,7 +1196,7 @@ function onSignInCallback(authResult) {
                 </table>
               </div>
               <div class="panel-footer">
-                <a  class="btn btn-theme" data-toggle="modal" data-target="#BuyModal" >Buy</a>
+                <a  class="btn btn-theme" data-toggle="modal" data-target="#BuyModal" ng-disabled="isPaying" >Buy</a>
                 <a id="nextPricing" class="btn btn-theme" role="button">Next ></a>
                 <input id="pricingIndex" hidden>
               </div>
@@ -1244,7 +1244,7 @@ function onSignInCallback(authResult) {
                       
                         <input type="hidden" id="user_email" value="{{userinfo.email}}">
                         <div class="col-md-9">
-                        <a id="customButton"  style="font-size:28px;" class="btn btn-primary">
+                        <a id="customButton"  style="font-size:28px;" class="btn btn-primary" ng-disabled="isPaying">
                         <img width="36px" height="36px"src="/static/img/stripe-img.png" />
                         PAY WITH CARD</a>
 
@@ -1257,7 +1257,7 @@ function onSignInCallback(authResult) {
                        
                     </div>
                     <div class="form-group">
-                      <iframe src="http://www.paywithatweet.com/dlbutton03.php?id=7bbc8a45-5488-4b54-b8e6-ad6d54dacf58" class="spaced-right" name="paytweet_button" scrolling="no" style="margin-left:16px" frameborder="no" height="48px" width="292px"  id="payWithTwitter"  ></iframe>
+                      <iframe src="http://www.paywithatweet.com/dlbutton03.php?id=7bbc8a45-5488-4b54-b8e6-ad6d54dacf58" class="spaced-right" name="paytweet_button" scrolling="no" style="margin-left:16px" frameborder="no" height="48px" width="292px"  id="payWithTwitter" ng-disabled="isPaying" ></iframe>
                     </div>
 
                     <div class="form-group" ng-show="isPaying">
