delete free from cta button on mobile
Former-commit-id: b17716dce2b9a2b3f65bf8ec1556a725a91eb5bd [formerly 70d6dfb4ee1a5e61c5d435958f5fbecec9949c3a] [formerly c3dd7bd71c0f84321df13527c5b6c98914f50952 [formerly d686d982230df39498b83fc8fc805829b16d0998]]
Former-commit-id: dffa5f77c55664509003869516f248d624f4edca [formerly ffefa6efc4330fda8ad0cabd1e83c1c1e55250aa]
Former-commit-id: 595d0f3586c04215aca2b0e695480a69b9f54895

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -355,7 +355,7 @@
                             <div id="customBtn" class="customGPlusSignIn">
                               <a href="/early-bird">
                               <span class="icon"></span>
-                              <span class="buttonText">Start using ioGrow for free!</span></a>
+                              <span class="buttonText">Start using ioGrow!</span></a>
                             </div>
                           </div>
                         <h1>Better way for Startups to do CRM</h1>
