adding screenshot on cdn:
Former-commit-id: 0ac6e11833e82fb8002311775259d87661bb061c [formerly 4ce9dadf59c8fb38ff3e3c25c7a55a2178fdc355] [formerly bfd7db639509782594479862914b2a47db0a6f07 [formerly f9f7eb761182e99786fde4902baf2e7507bb5781]]
Former-commit-id: f4cf660ce97b4fbb9ffc80bfa205ff698bc74749 [formerly 9b942beb65751f5c8374e5c2416e7c0e0f73063c]
Former-commit-id: 908f98c6c8498aed78915f44b2531cd3ad47dd44

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -367,7 +367,7 @@
                     </div>
 
 
-                    <img src="https://dl.dropboxusercontent.com/u/20304109/screenshot.png"
+                    <img src="http://storage.googleapis.com/iogrow-cdn/iogrow_screenshot.png"
                     style="margin-top:10px;"
                     class="img-responsive">
 
